mcore/src/statement/snapshots/mcore__statement__tree_utils__tree_utils_tests__same_param_map_test.snap
---
source: src/statement/tree_utils.rs
expression: maps

---
[
    {
        Param(
            "a",
        ): Variable(
            Variable(
                "x",
            ),
        )@0x7fe4d0002008 ,
    },
]
